testsuite/tests/parser/should_fail/pfail038.alan
hello() : proc
{
  foo[%] = 4;
}
