testsuite/tests/parser/should_fail/pfail038.stderr
pfail038.alan:3:7: Error: Parse error on input `%'
	Not a valid expression

